--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -2,17 +2,17 @@
 <odoo>
     <data>
 
-        <record id="product_template_only_form_view_lot_code" model="ir.ui.view">
-                <field name="name">product.template.product.form.lot_code</field>
-                <field name="model">product.template</field>
-                <!--<field name="mode">primary</field>-->
-                <field name="priority" eval="8" />
-                <field name="inherit_id" ref="product.product_template_only_form_view"/>
-                <field name="arch" type="xml">
-                    <field name="barcode" position="after">
-                        <field name="lot_abbv" />
-                    </field>
-                </field>
-        </record>
+<!--        <record id="product_template_only_form_view_lot_code" model="ir.ui.view">-->
+<!--                <field name="name">product.template.product.form.lot_code</field>-->
+<!--                <field name="model">product.template</field>-->
+<!--                &lt;!&ndash;<field name="mode">primary</field>&ndash;&gt;-->
+<!--                <field name="priority" eval="8" />-->
+<!--                <field name="inherit_id" ref="product.product_template_only_form_view"/>-->
+<!--                <field name="arch" type="xml">-->
+<!--                    <field name="barcode" position="after">-->
+<!--                        <field name="lot_abbv" />-->
+<!--                    </field>-->
+<!--                </field>-->
+<!--        </record>-->
     </data>
 </odoo>
