--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -6,7 +6,7 @@
                 <field name="priority" eval="8" />
                 <field name="inherit_id" ref="product.product_template_only_form_view"/>
                 <field name="arch" type="xml">
-                    <field name="default_code" position="after">
+                    <field name="use_expiration_date" position="after">
                         <field name="lot_abbv" />
                     </field>
                 </field>
