--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -7,7 +7,7 @@
                 <field name="inherit_id" ref="product.product_template_only_form_view"/>
                 <field name="arch" type="xml">
                     <field name="use_expiration_date" position="after">
-                        <field name="lot_abbv" invisible="1" attrs="{'visible': [('tracking', '==', 'lot')]}"/>
+                        <field name="lot_abbv" attrs="{'invisible': ['|',('tracking', '=', 'serial'),('tracking', '=', 'none')]}"/>
                     </field>
                 </field>
         </record>
