--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record id="product_variant_easy_edit_view_lot_code" model="ir.ui.view">
+            <field name="name">product.product.view.form.lot_code</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_variant_easy_edit_view" />
+           <field name="arch" type="xml">
+                    <field name="use_expiration_date" position="after">
+                        <field name="lot_abbv" attrs="{'invisible': ['|',('tracking', '=', 'serial'),('tracking', '=', 'none')]}"/>
+                    </field>
+                </field>
+        </record>
+
        <record id="product_template_only_form_view_lot_code" model="ir.ui.view">
                 <field name="model">product.template</field>
                 <field name="priority" eval="8" />
