--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -4,7 +4,7 @@
         <record id="product_variant_easy_edit_view_lot_code" model="ir.ui.view">
             <field name="name">product.product.view.form.lot_code</field>
             <field name="model">product.product</field>
-           <field name="inherit_id" ref="product.product_variant_easy_edit_view" />
+           <field name="inherit_id" ref="product.template.common.form" />
            <field name="arch" type="xml">
                     <field name="default_code" position="after">
                     <field name="tracking"/>
