--- a/generate_lot_id/views/product.xml
+++ b/generate_lot_id/views/product.xml
@@ -5,17 +5,13 @@
             <field name="name">product.product.view.form.lot_code</field>
             <field name="model">product.product</field>
            <field name="inherit_id" ref="product.product_normal_form_view" />
-           <field name="arch" type="xml">
-
-               <xpath name="route_ids" position="after">
+           <field name="arch" type="xml" >
+               <field name="route_ids" position="after"/>
                     <group>
                          <field name="tracking"/>
-                    <field name="use_expiration_date"/>
                         <field name="lot_abbv" attrs="{'invisible': ['|',('tracking', '=', 'serial'),('tracking', '=', 'none')]}"/>
-
+                         <field name="use_expiration_date"/>
                     </group>
-                </xpath>
-
                 </field>
         </record>
 
